--- a/FileExplorer/index.html
+++ b/FileExplorer/index.html
@@ -2,126 +2,134 @@
 <html>
 
 <head>
-    <title>File Explorer</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script type="text/javascript" src="/resources/lib/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="/resources/lib/jquery.form.min.js"></script>
-    <script type="text/javascript" src="/resources/js/myFileExplorer.js"></script>
-    <script type="text/javascript" src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.js"></script>
-    <link href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.css" rel="stylesheet" type="text/css">
-    <link href="css/common.css" rel="stylesheet" type="text/css">
+	<title>File Explorer</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<script type="text/javascript" src="/resources/lib/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="/resources/lib/jquery.form.min.js"></script>
+	<script type="text/javascript" src="/resources/js/myFileExplorer.js"></script>
+	<script type="text/javascript" src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.js"></script>
+	<link href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.css" rel="stylesheet" type="text/css">
+	<link href="css/common.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <div id="page-wrapper">
-        <header id="main-header">
-            <hgroup>
-                <div class="pull-left">
-                    <img class="master-img" src="http://placehold.it/30x30" />
-                    <h1 class="master-title">File Explorer</h1>
+	<div id="page-wrapper">
+		<header id="main-header">
+			<hgroup>
+				<div class="pull-left">
+					<img class="master-img" src="http://placehold.it/30x30" />
+					<h1 class="master-title">File Explorer</h1>
+				</div>
+				<div class="pull-right">
+					<img class="mater-user" src="http://placehold.it/30x30" />
+				</div>
+			</hgroup>
+		</header>
+		<div id="content">
+            <div class="main-center">
+                <div class="main-aside">
+                    <div class="aside-body">
+                        <div class="links">
+                            <a class="active" href="#">1</a>
+                            <a href="#">2</a>
+                            <a href="#">3</a>
+                            <a href="#">4</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="pull-right">
-                    <img class="mater-user" src="http://placehold.it/30x30" />
-                </div>
-            </hgroup>
-        </header>
-        <div id="content">
-            <div id="table">
-                <div class="row">
-                    <span class="cell-header col-file-path">test</span>
-                    <span class="cell-header col-file-upload">upload</span>
-                    <span class="cell-header col-file-search">search</span>
-                </div>
-                <div class="row">
-                    <span class="cell-header col1">열 1-1</span>
-                    <span class="cell-header col2">열 1-2</span>
-                    <span class="cell-header col3">열 1-3</span>
-                </div>
-                <div class="row">
-                    <span class="cell-body col1">열 1-1</span>
-                    <span class="cell-body col2">열 1-2</span>
-                    <span class="cell-body col3">열 1-3</span>
-                </div>
-                <div class="row">
-                    <span class="cell-body col1">열 2-1</span>
-                    <span class="cell-body col2">열 2-2</span>
-                    <span class="cell-body col3">열 2-3</span>
+                <div class="main-table">
+                    <div class="table-header">
+                        <div class="table-row">
+                            <div class="table-head table-col1">head1</div>
+                            <div class="table-head table-col2">head2</div>
+                            <div class="table-head table-col3">head3</div>
+                        </div>
+                    </div>
+                    <div class="table-body">
+                        <div class="table-row">
+                            <div class="table-cell table-col1">cell1_1</div>
+                            <div class="table-cell table-col2">cell2_1</div>
+                            <div class="table-cell table-col3">cell3_1</div>
+                        </div>
+                        <div class="table-row">
+                            <div class="table-cell table-col1">cell1_2</div>
+                            <div class="table-cell table-col2">cell2_2</div>
+                            <div class="table-cell table-col3">cell3_2</div>
+                        </div>
+                        <div class="table-row">
+                            <div class="table-cell table-col1">cell1_3</div>
+                            <div class="table-cell table-col2">cell2_3</div>
+                            <div class="table-cell table-col3">cell3_3</div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <footer id="main-footer">
-            <div class="footer-description">
-                Created By JOOHYEON-YU
-            </div>
-        </footer>
-    </div>
+		</div>
+		<footer id="main-footer">
+			<div class="footer-description">
+				Created By JOOHYEON-YU
+			</div>
+		</footer>
+	</div>
 
 
 
-
-
-
-
-
-
-
-
-    <div class="cur-dir-path">
-        <h3>Path: /home/yujoo/FileExplorerHome/뷰어 테스트</h3>
-    </div>
-    <hr>
-    <div>
-        <form id="upload-form" enctype="multipart/form-data" method="post">
-            <input type="file" id="upload-file" name="upload-file">
-            <input type="submit" id="upload-submit" value="submit" _vimium-has-onclick-listener="">
-        </form>
-    </div>
-    <div class="files">
-        <table>
-            <tbody>
-                <tr>
-                    <td>
-                        <span class="prev-dir-name" )="" _vimium-has-onclick-listener="">..</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <span class="dir-name" _vimium-has-onclick-listener="">*[뷰어 테스트 샘플문서]</span>
-                    </td>
-                    <td>2018-03-16 18:02</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>
-                        <span class="dir-name" _vimium-has-onclick-listener="">*[뷰어 테스트 암호문서]</span>
-                    </td>
-                    <td>2017-11-07 10:40</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>
-                        <span class="dir-name" _vimium-has-onclick-listener="">*[뷰어 테스트 이미지]</span>
-                    </td>
-                    <td>2018-03-05 11:33</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>
-                        <span class="context-menu">Multi Threading_???_20180220.pptx</span>
-                    </td>
-                    <td>2018-03-16 16:01</td>
-                    <td>1.2M</td>
-                </tr>
-                <tr>
-                    <td>
-                        <span class="context-menu">Multi Threading_유주현_20180220.pptx</span>
-                    </td>
-                    <td>2018-03-16 17:04</td>
-                    <td>1.2M</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+	<div class="cur-dir-path">
+		<h3>Path: /home/yujoo/FileExplorerHome/뷰어 테스트</h3>
+	</div>
+	<hr>
+	<div>
+		<form id="upload-form" enctype="multipart/form-data" method="post">
+			<input type="file" id="upload-file" name="upload-file">
+			<input type="submit" id="upload-submit" value="submit" _vimium-has-onclick-listener="">
+		</form>
+	</div>
+	<div class="files">
+		<table>
+			<tbody>
+				<tr>
+					<td>
+						<span class="prev-dir-name" )="" _vimium-has-onclick-listener="">..</span>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<span class="dir-name" _vimium-has-onclick-listener="">*[뷰어 테스트 샘플문서]</span>
+					</td>
+					<td>2018-03-16 18:02</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>
+						<span class="dir-name" _vimium-has-onclick-listener="">*[뷰어 테스트 암호문서]</span>
+					</td>
+					<td>2017-11-07 10:40</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>
+						<span class="dir-name" _vimium-has-onclick-listener="">*[뷰어 테스트 이미지]</span>
+					</td>
+					<td>2018-03-05 11:33</td>
+					<td>-</td>
+				</tr>
+				<tr>
+					<td>
+						<span class="context-menu">Multi Threading_???_20180220.pptx</span>
+					</td>
+					<td>2018-03-16 16:01</td>
+					<td>1.2M</td>
+				</tr>
+				<tr>
+					<td>
+						<span class="context-menu">Multi Threading_유주현_20180220.pptx</span>
+					</td>
+					<td>2018-03-16 17:04</td>
+					<td>1.2M</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </body>
 
 </html>
