add change content

--- a/ResponsiveWeb/4_작은 변화 패턴.html
+++ b/ResponsiveWeb/4_작은 변화 패턴.html
@@ -1,3 +1,9 @@
+<!-- 
+http://alistapart.com/
+작은 변화 패턴이란?
+말 그대로 글꼴 크기나 미지 크기 등 매우 사소한 것을 조정하여 해상도에 따라 변화를 주는 것을 말합니다. 
+이 패턴은 내용이 적거나 복잡하지 않을 경우에 적용하면 좋은 레이아웃입니다. 
+ -->
 <!DOCTYPE html>
 <html>
 <head>
