--- a/FileExplorer/index.html
+++ b/FileExplorer/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>File Explorer</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script type="text/javascript" src="/resources/lib/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="/resources/lib/jquery.form.min.js"></script>
 	<script type="text/javascript" src="/resources/js/myFileExplorer.js"></script>
@@ -11,182 +12,94 @@
 	<link href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
 	<link href="css/common.css" rel="stylesheet" type="text/css">
-	<link href="css/sticky-header-navbar.css" rel="stylesheet" type="text/css">
-	<link href="css/sticky-footer-navbar.css" rel="stylesheet" type="text/css">
+	<link href="css/sticky-header.css" rel="stylesheet" type="text/css">
+	<link href="css/sticky-footer.css" rel="stylesheet" type="text/css">
+	<link href="css/file-explorer-content.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<header id="header">
-		<nav class="aui-header">
-			<ul class="aui-nav">
-				<li>
-					<a class="logo" href="#">
-						<img src="images/logo_synapsoft.jpg" />
-					</a>
-				</li>
-				<li>
-					<a class="active" id="file-explorer-link" href="#">
+	<header id="aui-header">
+		<div class="aui-header-title">
+			<p style="text-align: center">
+				<h1>
+					SynapSoft
+				</h1>
+			</p>
+		</div>
+
+		<nav class="aui-header-primary">
+			<ul>
+				<li class="active">
+					<a href="#">
 						<span>File Explorer</span>
 					</a>
 				</li>
-				<li class="right">
-					<a class="user" href="#">
-						<img src="http://placehold.it/30x30"/>
+			</ul>
+		</nav>
+
+		<nav class="aui-header-secondary">
+			<ul>
+				<li>
+					<a href="#">
+						<img class="aui-nav-img" src="images/짱구.png" />
 					</a>
 				</li>
 			</ul>
 		</nav>
 	</header>
 
-	<header id="header">
-		<nav class="aui-header">
-			<div class="aui-header-primary">
-				<h1 class="aui-header-logo">
-					<a href="#">
-						<img class="logo" src="images/logo_synapsoft.jpg" />
-					</a>
-				</h1>
-				<ul class="aui-nav">
-					<li>
-						<a id="file-explorer-link" href="#">
-							<span>File Explorer</span>
-						</a>
-					</li>
-				</ul>
+	<div id="content">
+		<div class="content-top">
+			<div class="path">/home/document</div>
+			<div class="upload-form">
+				<form id="upload-form" enctype="multipart/form-data" method="post">
+					<input type="file" id="upload-file" name="upload-file">
+					<input type="submit" id="upload-submit" value="파일 업로드">
+				</form>
 			</div>
-			<div class="aui-header-sencondary">
-				<ul class="aui-nav">
-					<li>
-						<img class="master-user" src="http://placehold.it/30x30" />
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-
-	<div id="page-wrapper">
-		<ul class="main-top-nav">
-			<li>
-				<a href="#">
-					<img class="logo" src="images/logo_synapsoft.jpg" />
-				</a>
-			</li>
-			<li>
-				<a class="active" href="#">FileExplorer</a>
-			</li>
-			<li class="right">
-				<a href="#">
-					<img class="user" src="http://placehold.it/30x30" />
-				</a>
-			</li>
-		</ul>
-
-		<div id="content">
-			<div class="main-center">
-				<div class="center-top">
-					<div class="top-body">
-						<div class="cur-dir-path">
-							<h3>Path: /home/yujoo/FileExplorerHome/뷰어 테스트</h3>
-						</div>
-						<div class="search-bar">
-							<form>
-								<input type="text" class="input-search" />
-								<input type="submit" class="input-search-submit" value="검색" />
-							</form>
-						</div>
+			<div class="delimiter"></div>
+		</div>
+		<div class="content-section">
+			<div class="div-table gray-table files">
+				<div class="div-table-heading">
+					<div class="div-table-row">
+						<div class="div-table-head col1">이름</div>
+						<div class="div-table-head col2">생성 일자</div>
+						<div class="div-table-head col3">크기</div>
 					</div>
 				</div>
-				<div class="main-table">
-					<div class="table-header">
-						<div class="table-row">
-							<div class="table-head table-col1">head1</div>
-							<div class="table-head table-col2">head2</div>
-							<div class="table-head table-col3">head3</div>
-						</div>
+				<div class="div-table-body">
+					<div class="div-table-row">
+						<div class="div-table-cell col1">cell1_1</div>
+						<div class="div-table-cell col2">cell2_1</div>
+						<div class="div-table-cell col3">cell3_1</div>
 					</div>
-					<div class="table-body">
-						<div class="table-row">
-							<div class="table-cell table-col1">cell1_1</div>
-							<div class="table-cell table-col2">cell2_1</div>
-							<div class="table-cell table-col3">cell3_1</div>
-						</div>
-						<div class="table-row">
-							<div class="table-cell table-col1">cell1_2</div>
-							<div class="table-cell table-col2">cell2_2</div>
-							<div class="table-cell table-col3">cell3_2</div>
-						</div>
-						<div class="table-row">
-							<div class="table-cell table-col1">cell1_3</div>
-							<div class="table-cell table-col2">cell2_3</div>
-							<div class="table-cell table-col3">cell3_3</div>
-						</div>
+					<div class="div-table-row">
+						<div class="div-table-cell col1">cell1_2</div>
+						<div class="div-table-cell col2">cell2_2</div>
+						<div class="div-table-cell col3">cell3_2</div>
+					</div>
+					<div class="div-table-row">
+						<div class="div-table-cell col1">cell1_3</div>
+						<div class="div-table-cell col2">cell2_3</div>
+						<div class="div-table-cell col3">cell3_3</div>
+					</div>
+					<div class="div-table-row">
+						<div class="div-table-cell col1">cell1_4</div>
+						<div class="div-table-cell col2">cell2_4</div>
+						<div class="div-table-cell col3">cell3_4</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<footer id="main-footer">
-			<div class="footer-description">
-				Created By JOOHYEON-YU
-			</div>
-		</footer>
 	</div>
 
-
-
-
-	<hr>
-	<div>
-		<form id="upload-form" enctype="multipart/form-data" method="post">
-			<input type="file" id="upload-file" name="upload-file">
-			<input type="submit" id="upload-submit" value="submit" _vimium-has-onclick-listener="">
-		</form>
-	</div>
-	<div class="files">
-		<table>
-			<tbody>
-				<tr>
-					<td>
-						<span class="prev-dir-name" )="" _vimium-has-onclick-listener="">..</span>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<span class="dir-name" _vimium-has-onclick-listener="">*[뷰어 테스트 샘플문서]</span>
-					</td>
-					<td>2018-03-16 18:02</td>
-					<td>-</td>
-				</tr>
-				<tr>
-					<td>
-						<span class="dir-name" _vimium-has-onclick-listener="">*[뷰어 테스트 암호문서]</span>
-					</td>
-					<td>2017-11-07 10:40</td>
-					<td>-</td>
-				</tr>
-				<tr>
-					<td>
-						<span class="dir-name" _vimium-has-onclick-listener="">*[뷰어 테스트 이미지]</span>
-					</td>
-					<td>2018-03-05 11:33</td>
-					<td>-</td>
-				</tr>
-				<tr>
-					<td>
-						<span class="context-menu">Multi Threading_???_20180220.pptx</span>
-					</td>
-					<td>2018-03-16 16:01</td>
-					<td>1.2M</td>
-				</tr>
-				<tr>
-					<td>
-						<span class="context-menu">Multi Threading_유주현_20180220.pptx</span>
-					</td>
-					<td>2018-03-16 17:04</td>
-					<td>1.2M</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+	<footer id="footer">
+		<div class="footer-description">
+			<span>Created By JOOHYEON-YU</span>
+		</div>
+	</footer>
+	
 </body>
 
 </html>
