--- a/TestWebpack/Test/index.html
+++ b/TestWebpack/Test/index.html
@@ -4,6 +4,6 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="dist/bundle.js"></script>
   </body>
 </html>
