add scss in webpack

--- a/TestWebpack/Test/index.html
+++ b/TestWebpack/Test/index.html
@@ -1,9 +1,12 @@
-<!-- index.html -->
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
+    <title>webpack study</title>
+    <link rel="stylesheet" href="./dist/style.css">
+    <script src="./dist/bundle.js"></script>
   </head>
   <body>
-    <script type="text/javascript" src="dist/bundle.js"></script>
+    <h1>webpack study</h1>
   </body>
 </html>
