--- a/BEM/html/index.html
+++ b/BEM/html/index.html
@@ -5,33 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/bundle.css"/>
+    <script type="text/javascript" src="../js/commons.js"></script>
+    <script type="text/javascript" src="../js/bundle.js"></script>
     <title>Document</title>
 </head>
 <body>
     <h2>page-control</h2>
-    <div class="wrap__page-control">
-        <div class="page-control">
-                <div class="page-control__block page-control__block--able page-control__block--seperator">
-                        <!-- <img class="page-control__img" alt="prev-page" src="http://via.placeholder.com/100x100"> -->
-                </div>
-                <div class="page-control__block page-control__block--able">
-                        <img class="page-control__img" alt="prev-page" src="http://via.placeholder.com/100x100">
-                </div>
-                <div class="page-control__seperator"></div>
-                <div class="page-control__block page-control__block--able page-control__block--seperator">
-                        <img class="page-control__img" alt="prev-page" src="http://via.placeholder.com/100x100">
-                </div>
-                <div class="page-control__block page-control__block--able">
-                        <img class="page-control__img" alt="prev-page" src="http://via.placeholder.com/100x100">
-                </div>
-                <div class="page-control__seperator"></div>
-                <div class="page-control__block page-control__block--able page-control__block--able page-control__block--seperator">
-                        <img class="page-control__img" alt="prev-page" src="http://via.placeholder.com/100x100">
-                </div>
-                <div class="page-control__block page-control__block--disable">
-                        <img class="page-control__img" alt="prev-page" src="http://via.placeholder.com/100x100">
-                </div>
+    <div class="wrap__controlbar">
+        <div id="controlbar" class="controlbar">
         </div>
+        <div class="blank"></div>
     </div>
 </body>
 </html>
